--- a/VILTMaker/QuestionCollectionViewCell.xib
+++ b/VILTMaker/QuestionCollectionViewCell.xib
@@ -23,12 +23,19 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuN-oB-JlV">
+                        <rect key="frame" x="93" y="371" width="199" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="imageView" destination="VMw-bD-aX2" id="GLh-hq-gfu"/>
+                <outlet property="timeLabel" destination="OuN-oB-JlV" id="49d-aJ-Dqr"/>
                 <outlet property="titleLabel" destination="Jqs-1S-KWO" id="tqa-WQ-AXg"/>
             </connections>
         </collectionViewCell>
