Layer Interface first commit

--- a/VILTMaker/Base.lproj/Main.storyboard
+++ b/VILTMaker/Base.lproj/Main.storyboard
@@ -600,6 +600,6 @@
         <simulatedScreenMetrics key="destination" type="ipad12_9.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="15K-HM-Zbk"/>
+        <segue reference="RqO-3c-dHa"/>
     </inferredMetricsTieBreakers>
 </document>
